Major changes between version 0.99.1 and 0.99.2.
------------------------------------------------
  - Improve mode dev handling so we notice if the interface went
    down for reasons beyond oor ken.
  - Added basic igmp and ospfigp protocol rules and set the
    standard and dynamic filters to ignore them by default.
  - Added my setup scripts under the "setup" directory.
  - Added PAM authentication method on TCP monitor connections.
    (From Daniel P. Berrange <daniel@berrange.freeserve.co.uk>)
  - Set SO_REUSEADDR on the TCP socket used to listen for
    monitor connections.
  - Avoid using an extra socket unecessarily.
  - Use close on exec flag rather than trying (and failing) to
    figure out what to close every time we fork and exec.
  - Allow the value for a debug fifo command to be given as
    hex (0x...) or octal (0...).
  - Removed spurious calls to {ppp,slip,dev}_reroute(). These
    were unnecessary (I think) and perhaps the reason why the
    idle filter socket sometimes seemed to stop receiving data.
  - The proxy should never be downed - it needs to be up in case
    we want to pass packets back to the kernel - instead we just
    remove the address. We do much the same for "mode dev" interfaces
    since some (ISDN) need to remain up if they are to accept
    incoming calls. We do have to remember to down the proxy
    on exit however.
  - If the remote end drops the link and we are in two-way mode
    we just go DOWN and wait for outgoing traffic. If we are not
    in two-way mode we have to do an immediate retry because we
    have no way of knowing why the link went down or whether the
    remote now has traffic piling up that should be reaching us.
  - Try and make sure the kernel setting of ip_dynaddr is non-zero
    if we are running in "dynamic" or "sticky" mode.
  - fixwrappers now checks exit status of ar to see if it succeeded
    or not.
  - Removed references to reroute and -reroute from the man page.
  - Enabled the demasq code.