@@ -415,9 +415,9 @@ void parse_up(void *var, char **argv);
 void parse_down(void *var, char **argv);
 void parse_prule(void *var, char **argv);
 void parse_var(void *var, char **argv);
-void iface_start(char *, char *, int, char *, char *, char *);
-void iface_stop(char *, char *, int, char *, char *, char *);
-void iface_down(char *, char *, int, char *, char *, char *);
+void iface_start(char *, char *, int, char *, char *, char *, int);
+void iface_stop(char *, char *, int, char *, char *, char *, int);
+void iface_down(char *, char *, int, char *, char *, char *, int);
 void close_modem(void);
 int open_modem (void);
 void reopen_modem (void);
