@@ -170,7 +170,7 @@ static void
 proxy_slip_start(proxy_t *proxy)
 {
     iface_start("proxy", proxy->iftype, proxy->ifunit,
-	orig_local_ip, orig_remote_ip, orig_broadcast_ip);
+	orig_local_ip, orig_remote_ip, orig_broadcast_ip, metric+1);
 }
 
 
@@ -178,7 +178,7 @@ static void
 proxy_slip_stop(proxy_t *proxy)
 {
     iface_stop("proxy", proxy->iftype, proxy->ifunit,
-	orig_local_ip, orig_remote_ip, orig_broadcast_ip);
+	orig_local_ip, orig_remote_ip, orig_broadcast_ip, metric+1);
 }
 
 
@@ -195,7 +195,7 @@ proxy_slip_release(proxy_t *proxy)
 {
     proxy_slip_stop(proxy);
     iface_down("proxy", proxy->iftype, proxy->ifunit,
-	orig_local_ip, orig_remote_ip, orig_broadcast_ip);
+	orig_local_ip, orig_remote_ip, orig_broadcast_ip, metric+1);
 
     /* clear the line discipline */
     if (ioctl(proxy_sfd, TIOCSETD, &orig_disc) < 0)
